--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Red_pandas4life.com</title>
-    <link href="styles/passionproj.css" rel="stylesheet"  type="text/css" /> 
+    <link href="passionproj.css" rel="stylesheet"  type="text/css" /> 
 </head>
 <body>
 <div class="div1">
