--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
   <div class="pic1">
-  <img src="resources/th.webp" alt="red panda">
+  <img src="th.webp" alt="red panda">
   </div><br>
 
 </div><br>
