--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Red_pandas4life.com</title>
-    <link href="passionproj.css" rel="stylesheet"  type="text/css" /> 
+    <link rel="shortcut icon" href="resources/Untitled design (7).png" type="image/x-icon">
+    <link href="styles/passionproj.css" rel="stylesheet"  type="text/css" /> 
 </head>
 <body>
 <div class="div1">
@@ -33,16 +34,34 @@
 
 
   <div class="pic1">
-  <img src="th.webp" alt="red panda">
+  <img src="resources/th.webp" alt="red panda">
   </div><br>
 
-</div><br>
-
-<div class="div3">
-<h2>&nbsp;&nbsp;&nbsp;&nbsp;This website covers a detailed explanation on why these animals need to be saved and how you can help</h2><br>
 </div>
+
+<div class="div4">
+
+<h3>This website covers a detailed explanation on why these animals need to be saved and how you can help. The red pandas are racoon like creatures with reddish-brown fur. They are primarily found in the eastern himalayas. Like pandas, they mainly eat bamboo but as they are excellent climbers and extremely energetic they eat small birds, mammals, eggs, flowers and berries</h2>
+<a href="Pages/The red panda.html">Read more</a>
+
+
+  <h3>The red pandas are critically endangered with a population of only 10,000. They suffer a cold hard winter due to deforestation and are killed for local cultural ceremonies, they are also poached for their fur, teeth and tail. The rarer they get the more they are being poached. This practice has been going on since the 13th century as depicted from a Chinese scroll</h2>
+<a href="Pages/Threatred.html">Read more </a>
+</div>
+
+<div class="pic2"
+<img src="resources/e.png" alt="Redpanda">
+</div>
+
+<div class="div5">
+  <h3>Created and Coded by Aditya Rajkumar 7A</h2>
+</div>
+
 
 
 
 </body>
 </html>
+
+
+
