--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Red_pandas4life.com</title>
     <link rel="shortcut icon" href="resources/Untitled design (7).png" type="image/x-icon">
-    <link href="styles/passionproj.css" rel="stylesheet"  type="text/css" /> 
+    <link href="passionproj.css" rel="stylesheet"  type="text/css" /> 
 </head>
 <body>
 <div class="div1">
@@ -12,9 +12,9 @@
   <nav>
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="Pages/The red panda.html">The Red Panda</a></li>
-      <li><a href="Pages/Threatred.html">Threat</a></li>
-      <li><a href="Pages/Uhelpred.html">How you can help</a></li>
+      <li><a href="The red panda.html">The Red Panda</a></li>
+      <li><a href="Threatred.html">Threat</a></li>
+      <li><a href="Uhelpred.html">How you can help</a></li>
     </ul>
   </nav><br>
 
