--- a/index.html
+++ b/index.html
@@ -11,49 +11,89 @@
 
   <nav>
     <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="Pages/The red panda.html">The Red Panda</a></li>
+      <li><a class="active" href="index.html"><u>Home</u></a></li>
       <li><a href="Pages/Threatred.html">Threat</a></li>
       <li><a href="Pages/Uhelpred.html">How you can help</a></li>
-      <li><a href="Pages/Other.html">Other</a></li>
+      <li><a href="Pages/Other.html">Glossary</a></li>
     </ul>
   </nav><br>
 
 </div>
 
-<div class="div2">
-  <div class="txt1">
-    <h2>The site for people curious about red pandas, a site including all the information about </h2>
-    <h2> red pandas and why we should save them. Young learners to mature students, we  </h2>
-    <h2> accomodate all. Read, Donate, Spread, Adopt. Anything and everything will help </h2>
-    <h2>these poor creatures reaching the dark fate of extinction.</h2><br>
-   
-
+<div>
+<table>
+   <tr class="headerRow"> 
+     <td>
+    <div class="pic1">
+      <img src="resources/raccoon_man_raccoon_man_does_whatever_a_raccoon_can.webp" alt="red panda"></td>
+     
+      <td>
+     <h2>Do you know the red panda?</h2>
+    <h3 class="just">It is a racoon like creature with beautiful red and black fur mostly inhabiting the eastern Himalayan region and southwest China. It is a very exotic yet endangered species with only
+    10,000 individuals alive and is on the verge of extinction.</h3></td>
   </div>
 
-
-
-
-  <div class="pic1">
-  <img src="resources/raccoon_man_raccoon_man_does_whatever_a_raccoon_can.webp" alt="red panda">
-  </div><br>
-
+  
+</tr>
+</table>
 </div>
+
 
 <div class="div4">
+  <h3>How do they look?</h3>
+  <h4> It has reddish-brown fur, a long tail and it is roughly the size of your pet cat. Its teeth are hard and it has a tail with six alternating transverse ochre rings which provide balance and excellent camouflage in a green habitat which consists of moss and lichen. Its fur acts as thermal insulation. The red panda is a professional at eating bamboo with strong, curved and semi-retractile claws with this it has a false thumb similar to the giant thumb for gripping bamboo better. </h4>
+  </div>
 
-<h3>This website covers a detailed explanation on why these animals need to be saved and how you can help. The red pandas are racoon like creatures with reddish-brown fur. They are primarily found in the eastern himalayas. Like pandas, they mainly eat bamboo but as they are excellent climbers and extremely energetic they eat small birds, mammals, eggs, flowers and berries</h2>
-<a href="Pages/The red panda.html">Read more</a>
+  <table >
+<tr class="table2">
+  <td class="td1">
+    <h3>What do they eat?</h3>
+    <h4> Its main diet is bamboo leaves as bamboo stems cannot be digested by them due to high levels of cellulose but as it excells in climbing, its diet also includes eggs, birds and insects. In captivity, They were observed to eat birds, flowers, maple and mulberry leaves, and bark and fruits of maple, beech, and mulberry. They also eat mushrooms, roots, acorns, lichens, and grasses. Occasionally, they supplement their diets with fish and insects. They eat over 1.5kg of fresh leaves and 4kg of fresh shoots daily. They can taste artificial sweeteners, and they are the only non primates known to be able to do so.</h4>
+  </td>
 
+        <td>
+          <div class="img2">
+            <img src="resources/rebonda3.png" alt="Red panda 2">
+         </div>
+      </td>
+    </tr>
+  </table>
 
-  <h3>The red pandas are critically endangered with a population of only 10,000. They suffer a cold hard winter due to deforestation and are killed for local cultural ceremonies, they are also poached for their fur, teeth and tail. The rarer they get the more they are being poached. This practice has been going on since the 13th century as depicted from a Chinese scroll</h2>
-<a href="Pages/Threatred.html">Read more </a>
-</div>
-
-
-<div class="div5">
-  <h3>Created and Coded by Aditya Rajkumar 7A</h2>
-</div>
+  <style>
+    .scroll-left {
+     height: 50px;	
+     overflow: hidden;
+     position: relative;
+     background: white;
+     color: black;
+     border: 1px solid white;
+    }
+    .scroll-left p {
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     margin: 0;
+     line-height: 50px;
+     text-align: center;
+     /* Starting position */
+     transform:translateX(100%);
+     /* Apply animation to this element */
+     animation: scroll-left 15s linear infinite;
+    }
+    /* Move it (define the animation) */
+    @keyframes scroll-left {
+     0%   {
+     transform: translateX(50%); 		
+     }
+     100% {
+     transform: translateX(-70%); 
+     }
+    }
+    </style>
+    
+    <div class="scroll-left">
+    <p>Created and Coded by Aditya Rajkumar 7A </p>
+    </div>
 
 
 
