third commit: modified page names

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <nav>
     <ul>
       <li><a class="active" href="index.html"><u>Home</u></a></li>
-      <li><a href="Pages/Threatred.html">Threat</a></li>
-      <li><a href="Pages/Uhelpred.html">How you can help</a></li>
-      <li><a href="Pages/Other.html">Glossary</a></li>
+      <li><a href="pages/threatred.html">Threat</a></li>
+      <li><a href="pages/uhelpred.html">How you can help</a></li>
+      <li><a href="pages/other.html">Glossary</a></li>
     </ul>
   </nav><br>
 
