--- a/pages/Other.html
+++ b/pages/Other.html
@@ -3,7 +3,7 @@
 <head>
     <title>Red_pandas4life.com</title>
     <link rel="shortcut icon" href="../resources/Untitled design (7).png" type="image/x-icon">
-    <link href="../styles/Other.css" rel="stylesheet"  type="text/css" /> 
+    <link href="../styles/other.css" rel="stylesheet"  type="text/css" /> 
 </head>
 <body>
 <div class="div1">
@@ -12,9 +12,9 @@
   <nav>
     <ul>
       <li><a class="active" href="../index.html">Home</a></li>
-      <li><a href="Threatred.html">Threat</a></li>
-      <li><a href="Uhelpred.html">How you can help</a></li>
-      <li><a href="Other.html"><u>Glossary</u></a></li>
+      <li><a href="threatred.html">Threat</a></li>
+      <li><a href="uhelpred.html">How you can help</a></li>
+      <li><a href="other.html"><u>Glossary</u></a></li>
     </ul>
   </nav><br>
 
