--- a/pages/Uhelpred.html
+++ b/pages/Uhelpred.html
@@ -3,7 +3,7 @@
     <head>
         <title>Red_pandas4life.com</title>
         <link rel="shortcut icon" href="../resources/title.png" type="image/x-icon">
-        <link href="../styles/Uhelpred.css" rel="stylesheet"  type="text/css"> 
+        <link href="../styles/uhelpred.css" rel="stylesheet"  type="text/css"> 
     </head>
     <body >
         <div class="div1">
@@ -12,9 +12,9 @@
         <nav>
             <ul>
               <li><a class="active" href="../index.html">Home</a></li>
-              <li><a href="Threatred.html">Threat</a></li>
-              <li><a href="Uhelpred.html"><u>How you can help</u></a></li>
-              <li><a href="Other.html">Glossary</a></li>
+              <li><a href="threatred.html">Threat</a></li>
+              <li><a href="uhelpred.html"><u>How you can help</u></a></li>
+              <li><a href="other.html">Glossary</a></li>
             </ul>
             </nav>
 
