modified relative path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Red_pandas4life.com</title>
     <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
-    <link href="styles/passionproj.css" rel="stylesheet"  type="text/css" /> 
+    <link href="./styles/passionproj.css" rel="stylesheet"  type="text/css" /> 
 </head>
 <body>
 <div class="div1">
@@ -12,9 +12,9 @@
   <nav>
     <ul>
       <li><a class="active" href="index.html"><u>Home</u></a></li>
-      <li><a href="pages/threatred.html">Threat</a></li>
-      <li><a href="pages/uhelpred.html">How you can help</a></li>
-      <li><a href="pages/other.html">Glossary</a></li>
+      <li><a href="./pages/threatred.html">Threat</a></li>
+      <li><a href="./pages/uhelpred.html">How you can help</a></li>
+      <li><a href="./pages/other.html">Glossary</a></li>
     </ul>
   </nav><br>
 
@@ -25,7 +25,7 @@
    <tr class="headerRow"> 
      <td>
     <div class="pic1">
-      <img src="resources/raccoon_man_raccoon_man_does_whatever_a_raccoon_can.webp" alt="red panda"></td>
+      <img src="./resources/raccoon_man_raccoon_man_does_whatever_a_raccoon_can.webp" alt="red panda"></td>
      
       <td>
      <h2>Do you know the red panda?</h2>
@@ -53,7 +53,7 @@
 
         <td>
           <div class="img2">
-            <img src="resources/rebonda3.png" alt="Red panda 2">
+            <img src="./resources/rebonda3.png" alt="Red panda 2">
          </div>
       </td>
     </tr>
