--- a/pages/The red panda.html
+++ b/pages/The red panda.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Red_pandas4life.com</title>
-        <link rel="shortcut icon" href="../resources/title.png" type="image/x-icon">
-        <link href="../styles/the red panda.css" rel="stylesheet"  type="text/css"> 
-    </head>
-    <body >
-        <div class="div1">
-            <h1>The Red Panda</h1>
+  <head>
+    <title>Red_pandas4life.com</title>
+    <link
+      rel="shortcut icon"
+      href="../resources/title.png"
+      type="image/x-icon"
+    />
+    <link href="../styles/the red panda.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="div1">
+      <h1>The Red Panda</h1>
 
-        <nav>
-          <ul>
-              <li><a class="active" href="../index.html">Home</a></li>
-              <li><a href="The red panda.html">The Red Panda</a></li>
-              <li><a href="Threatred.html">Threat</a></li>
-              <li><a href="Uhelpred.html">How you can help</a></li>
-              <li><a href="Other.html">Other</a></li>
-            </ul>
-            </nav>
+      <nav>
+        <ul>
+          <li><a class="active" href="../index.html">Home</a></li>
+          <li><a href="The red panda.html">The Red Panda</a></li>
+          <li><a href="Threatred.html">Threat</a></li>
+          <li><a href="Uhelpred.html">How you can help</a></li>
+          <li><a href="Other.html">Other</a></li>
+        </ul>
+      </nav>
+    </div>
 
-            
-</div>
-         
-<div class="txt1">
-    <h2>What are red pandas?</h2>
-    <h3>The red panda (Ailurus fulgens) is carnivorous racoon looking panda native to the eastern Himalayas and southwest China. </h3><br>
+    <div class="txt1">
+      <h2>What are red pandas?</h2>
+      <h3>
+        The red panda (Ailurus fulgens) is carnivorous racoon looking panda
+        native to the eastern Himalayas and southwest China.
+      </h3>
+      <br />
 
-    <div class="img1">
-    <img src="../resources/repanda2.jpg" alt="Red panda 2" height="25%" width="25%">
-    </div><br><br><br><br><br><br><br><br><br> 
+      <div class="img1">
+        <img
+          src="../resources/repanda2.jpg"
+          alt="Red panda 2"
+          height="25%"
+          width="25%"
+        />
+      </div>
+      <br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <h2>Physical characteristics</h2>
-<h3> It has reddish-brown fur, a long tail and it is roughly the size of your pet cat. Its teeth are robust and it has a tail with six alternating transverse ochre rings which provide balance and excellent camouflage in a green habitat which consists of moss and lichen. Its fur acts as thermal insulation. The red panda is a professional at eating bamboo with strong, curved and semi-retractile claws with this it has a false thumb similar to the giant thumb for gripping bamboo better. </h3><br>
-<h2>Diet</h2>
-<h3> Its main diet is bamboo leaves as bamboo stems cannot be digested by them due to high levels of cellulose but as it excells in climbing, its diet also includes eggs, birds and insects. In captivity, They were observed to eat birds, flowers, maple and mulberry leaves, and bark and fruits of maple, beech, and mulberry. They also eat mushrooms, roots, acorns, lichens, and grasses. Occasionally, they supplement their diets with fish and insects. They eat over 1.5kg of fresh leaves and 4kg of fresh shoots daily. They can Taste artificial sweeteners, and they are the only non primates known to be able to do so.</h3>
-</div>
-
-</body>
+      <h2>Physical characteristics</h2>
+      <h3>
+        It has reddish-brown fur, a long tail and it is roughly the size of your
+        pet cat. Its teeth are robust and it has a tail with six alternating
+        transverse ochre rings which provide balance and excellent camouflage in
+        a green habitat which consists of moss and lichen. Its fur acts as
+        thermal insulation. The red panda is a professional at eating bamboo
+        with strong, curved and semi-retractile claws with this it has a false
+        thumb similar to the giant thumb for gripping bamboo better.
+      </h3>
+      <br />
+      <h2>Diet</h2>
+      <h3>
+        Its main diet is bamboo leaves as bamboo stems cannot be digested by
+        them due to high levels of cellulose but as it excells in climbing, its
+        diet also includes eggs, birds and insects. In captivity, They were
+        observed to eat birds, flowers, maple and mulberry leaves, and bark and
+        fruits of maple, beech, and mulberry. They also eat mushrooms, roots,
+        acorns, lichens, and grasses. Occasionally, they supplement their diets
+        with fish and insects. They eat over 1.5kg of fresh leaves and 4kg of
+        fresh shoots daily. They can Taste artificial sweeteners, and they are
+        the only non primates known to be able to do so.
+      </h3>
+    </div>
+  </body>
 </html>
