--- a/pages/Other.html
+++ b/pages/Other.html
@@ -1,74 +1,89 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Red_pandas4life.com</title>
-    <link rel="shortcut icon" href="../resources/Untitled design (7).png" type="image/x-icon">
-    <link href="../styles/other.css" rel="stylesheet"  type="text/css" /> 
-</head>
-<body>
-<div class="div1">
-  <h1>The Red Panda</h1>
+    <link
+      rel="shortcut icon"
+      href="../resources/Untitled design (7).png"
+      type="image/x-icon"
+    />
+    <link href="../styles/other.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="div1">
+      <h1>The Red Panda</h1>
 
-  <nav>
-    <ul>
-      <li><a class="active" href="../index.html">Home</a></li>
-      <li><a href="threatred.html">Threat</a></li>
-      <li><a href="uhelpred.html">How you can help</a></li>
-      <li><a href="other.html"><u>Glossary</u></a></li>
-    </ul>
-  </nav><br>
+      <nav>
+        <ul>
+          <li><a class="active" href="../index.html">Home</a></li>
+          <li><a href="threatred.html">Threat</a></li>
+          <li><a href="uhelpred.html">How you can help</a></li>
+          <li>
+            <a href="other.html"><u>Glossary</u></a>
+          </li>
+        </ul>
+      </nav>
+      <br />
+    </div>
+    <div class="div2">
+      <h2>Glossary</h2>
+      <h3>Retractile- The ability to retract</h3>
+      <h3>
+        Primate-A mammal of the group that includes lemurs, lorises, tarsiers,
+        monkeys, apes, and humans.
+      </h3>
+      <h3>
+        Fragmentation-the process or state of breaking or being broken into
+        fragments.
+      </h3>
+      <h3>CITES-Convention on International Trade in Endangered Species.</h3>
+      <h3>Ngo-Non government organization</h3>
+      <br />
 
-</div>
-<div class="div2">
-<h2>Glossary</h2>
-<h3>Retractile- The ability to retract</h3>
-<h3>Primate-A mammal of the group that includes lemurs, lorises, tarsiers, monkeys, apes, and humans.</h3>
-<h3>Fragmentation-the process or state of breaking or being broken into fragments.</h3>
-<h3>CITES-Convention on International Trade in Endangered Species.</h3>
-<h3>Ngo-Non government organization</h3><br>
+      <h2>Sources</h2>
+      <a href="https://byjus.com/free-ias-prep/red-panda/">Byjus</a><br />
+      <a href="https://www.worldwildlife.org/species/red-panda">WWF</a><br />
+      <a href="https://www.bing.com (google.co.in)">Bing</a><br />
+      <a href="https://www.w3schools.com/">Coding Techniques at W3schools</a
+      ><br />
+      <a href="https://en.wikipedia.org/wiki/Red_panda#Threats">wikipedia</a
+      ><br />
+    </div>
 
-<h2>Sources</h2>
-<a href="https://byjus.com/free-ias-prep/red-panda/">Byjus</a><br>
-<a href="https://www.worldwildlife.org/species/red-panda">WWF</a><br>
-<a href="https://www.bing.com (google.co.in)">Bing</a><br>
-<a href="https://www.w3schools.com/">Coding Techniques at W3schools</a><br>
-<a href="https://en.wikipedia.org/wiki/Red_panda#Threats">wikipedia</a><br>
-</div>
+    <style>
+      .scroll-left {
+        height: 50px;
+        overflow: hidden;
+        position: relative;
+        background: white;
+        color: maroon;
+        border: 1px solid white;
+      }
+      .scroll-left p {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        line-height: 50px;
+        text-align: center;
+        /* Starting position */
+        transform: translateX(100%);
+        /* Apply animation to this element */
+        animation: scroll-left 15s linear infinite;
+      }
+      /* Move it (define the animation) */
+      @keyframes scroll-left {
+        0% {
+          transform: translateX(50%);
+        }
+        100% {
+          transform: translateX(-70%);
+        }
+      }
+    </style>
 
-<style>
-  .scroll-left {
-   height: 50px;	
-   overflow: hidden;
-   position: relative;
-   background: white;
-   color: maroon;
-   border: 1px solid white;
-  }
-  .scroll-left p {
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   margin: 0;
-   line-height: 50px;
-   text-align: center;
-   /* Starting position */
-   transform:translateX(100%);
-   /* Apply animation to this element */
-   animation: scroll-left 15s linear infinite;
-  }
-  /* Move it (define the animation) */
-  @keyframes scroll-left {
-   0%   {
-   transform: translateX(50%); 		
-   }
-   100% {
-   transform: translateX(-70%); 
-   }
-  }
-  </style>
-  
-  <div class="scroll-left">
-  <p>Created and Coded by Aditya Rajkumar 7A </p>
-  </div>
-</body>
+    <div class="scroll-left">
+      <p>Created and Coded by Aditya Rajkumar 7A</p>
+    </div>
+  </body>
 </html>
