--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a  href="#pg1"><u>Home</u></a></li>
-      <li><a href="threatred.html">Threat</a></li>
+      <li><a href="https://adityarajkumar09.github.io/Red-Panda/pages/threatred.html">Threat</a></li>
       <li><a href="./pages/uhelpred.html">How you can help</a></li>
       <li><a href="./pages/other.html">Glossary</a></li>
     </ul>
@@ -62,6 +62,7 @@
 </div>
 
 </div>
+
 
 </body>
 </html>
