--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a class="active" href="index.html"><u>Home</u></a></li>
-      <li><a href="https://adityarajkumar09/Red-Panda/pages/threatred.html">Threat</a></li>
+      <li><a href="./pages/threatred.html">Threat</a></li>
       <li><a href="./pages/uhelpred.html">How you can help</a></li>
       <li><a href="./pages/other.html">Glossary</a></li>
     </ul>
