updated index.html and added test

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <nav>
     <ul>
       <li><a  href="#pg1"><u>Home</u></a></li>
-      <li><a href="https://adityarajkumar09.github.io/Red-Panda/pages/threatred.html">Threat</a></li>
+      <li><a href="./pages/threatred.html">Threat</a></li>
       <li><a href="./pages/uhelpred.html">How you can help</a></li>
       <li><a href="./pages/other.html">Glossary</a></li>
+      <li><a hred="./pages/sample.html">sample</a></li>
     </ul>
   </nav><br>
 </div>
