--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="./pages/threatred.html">Threat</a></li>
       <li><a href="./pages/uhelpred.html">How you can help</a></li>
       <li><a href="./pages/other.html">Glossary</a></li>
-      <li><a href="test.html">sample</a></li>
+      <li><a href="./test.html">sample</a></li>
     </ul>
   </nav><br>
 </div>
