--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <ul>
       <li><a  href="#pg1"><u>Home</u></a></li>
       <li><a href="./pages/threatred.html">Threat</a></li>
-      <li><a href="./pages/uhelpred.html">How you can help</a></li>
-      <li><a href="./pages/other.html">Glossary</a></li>
-      <li><a href="./test.html">sample</a></li>
+      <li><a href="./uhelpred.html">How you can help</a></li>
+      <li><a href="./other.html">Glossary</a></li>
     </ul>
   </nav><br>
 </div>
