--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a  href="#pg1"><u>Home</u></a></li>
-      <li><a href="./pages/threatred.html">Threat</a></li>
+      <li><a href="./threatred.html">Threat</a></li>
       <li><a href="./uhelpred.html">How you can help</a></li>
       <li><a href="./other.html">Glossary</a></li>
     </ul>
