--- a/other.html
+++ b/other.html
@@ -4,10 +4,10 @@
     <title>Red_pandas4life.com</title>
     <link
       rel="shortcut icon"
-      href="../resources/Untitled design (7).png"
+      href="resources/Untitled design (7).png"
       type="image/x-icon"
     />
-    <link href="../styles/other.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/other.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="div1">
@@ -15,11 +15,11 @@
 
       <nav>
         <ul>
-          <li><a class="active" href="../index.html">Home</a></li>
-          <li><a href="threatred.html">Threat</a></li>
-          <li><a href="uhelpred.html">How you can help</a></li>
+          <li><a class="active" href="./index.html">Home</a></li>
+          <li><a href="./threatred.html">Threat</a></li>
+          <li><a href="./uhelpred.html">How you can help</a></li>
           <li>
-            <a href="other.html"><u>Glossary</u></a>
+            <a href="./other.html"><u>Glossary</u></a>
           </li>
         </ul>
       </nav>
