--- a/threatred.html
+++ b/threatred.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Red_pandas4life.com</title>
-        <link rel="shortcut icon" href="../resources/title.png" type="image/x-icon">
-        <link href="../styles/threatred.css" rel="stylesheet"  type="text/css"> 
+        <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
+        <link href="./styles/threatred.css" rel="stylesheet"  type="text/css"> 
     </head>
     <body >
         <div class="div1">
@@ -11,10 +11,10 @@
 
         <nav>
             <center><ul>
-              <li><a class="active" href="../index.html">Home</a></li>
-              <li><a href="threatred.html"><u>Threat</u></a></li>
-              <li><a href="uhelpred.html">How you can help</a></li>
-              <li><a href="other.html">Glossary</a></li>
+              <li><a class="active" href="./index.html">Home</a></li>
+              <li><a href="./threatred.html"><u>Threat</u></a></li>
+              <li><a href="./uhelpred.html">How you can help</a></li>
+              <li><a href="./other.html">Glossary</a></li>
             </ul></center>
             </nav>
 
@@ -28,7 +28,7 @@
             </td>
             <td>
                 <div class="img1">
-                <img src="../resources/repanda2.jpg" alt="e" width="400px" height="250px">
+                <img src="resources/repanda2.jpg" alt="e" width="400px" height="250px">
             </div>
             </td>
             </tr>
