--- a/uhelpred.html
+++ b/uhelpred.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Red_pandas4life.com</title>
-        <link rel="shortcut icon" href="../resources/title.png" type="image/x-icon">
-        <link href="../styles/uhelpred.css" rel="stylesheet"  type="text/css"> 
+        <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
+        <link href="./styles/uhelpred.css" rel="stylesheet"  type="text/css"> 
     </head>
     <body >
         <div class="div1">
@@ -11,10 +11,10 @@
 
         <nav>
             <ul>
-              <li><a class="active" href="../index.html">Home</a></li>
-              <li><a href="threatred.html">Threat</a></li>
-              <li><a href="uhelpred.html"><u>How you can help</u></a></li>
-              <li><a href="other.html">Glossary</a></li>
+              <li><a class="active" href="./index.html">Home</a></li>
+              <li><a href="./threatred.html">Threat</a></li>
+              <li><a href="./uhelpred.html"><u>How you can help</u></a></li>
+              <li><a href="./other.html">Glossary</a></li>
             </ul>
             </nav>
 
@@ -24,7 +24,7 @@
            <tr class="tr1">
                <td>
                    <div class="img1">
-                       <img src="../resources/rabonda.png" width="500%" height="500%">
+                       <img src="resources/rabonda.png" width="500%" height="500%">
                     </div>
                </td>
                <td class="div2">
