--- a/other.html
+++ b/other.html
@@ -7,7 +7,7 @@
       href="resources/Untitled design (7).png"
       type="image/x-icon"
     />
-    <link href="./styles/other.css" rel="stylesheet" type="text/css" />
+    <link href="styles/other.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="div1">
