--- a/other.html
+++ b/other.html
@@ -25,6 +25,11 @@
       </nav>
       <br />
     </div>
+
+    <div class="img43849">
+      <img src="resources/redpanda.jpg" alt="redmanincostume" width="25%" height="25%">
+    </div>
+
     <div class="div2">
       <h2>Glossary</h2>
       <h3>Retractile- The ability to retract</h3>
@@ -50,37 +55,7 @@
       ><br />
     </div>
 
-    <style>
-      .scroll-left {
-        height: 50px;
-        overflow: hidden;
-        position: relative;
-        background: white;
-        color: maroon;
-        border: 1px solid white;
-      }
-      .scroll-left p {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        line-height: 50px;
-        text-align: center;
-        /* Starting position */
-        transform: translateX(100%);
-        /* Apply animation to this element */
-        animation: scroll-left 15s linear infinite;
-      }
-      /* Move it (define the animation) */
-      @keyframes scroll-left {
-        0% {
-          transform: translateX(50%);
-        }
-        100% {
-          transform: translateX(-70%);
-        }
-      }
-    </style>
+
 
     <div class="scroll-left">
       <p>Created and Coded by Aditya Rajkumar 7A</p>
