--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>The Red Panda</h1>
   <nav>
     <ul>
-      <li><a  href="#pg1"><u>Home</u></a></li>
+      <li><a href="#pg1"><u>Home</u></a></li>
       <li><a href="./threatred.html">Threat</a></li>
       <li><a href="./uhelpred.html">How you can help</a></li>
       <li><a href="./other.html">Glossary</a></li>
@@ -47,7 +47,7 @@
   <tr class="table2">
     <td class="td1">
       <h3>What do they eat?</h3>
-      <h4> Its main diet is bamboo leaves as bamboo stems cannot be digested by them due to high levels of cellulose but as it excells in climbing, its diet also includes eggs, birds and insects. In captivity, They were observed to eat birds, flowers, maple and mulberry leaves, and bark and fruits of maple, beech, and mulberry. They also eat mushrooms, roots, acorns, lichens, and grasses. Occasionally, they supplement their diets with fish and insects. They eat over 1.5kg of fresh leaves and 4kg of fresh shoots daily. They can taste artificial sweeteners, and they are the only non primates known to be able to do so.</h4>
+      <h4> Its main diet is bamboo leaves as bamboo stems cannot be digested by them due to high levels of cellulose but as it excels in climbing, its diet also includes eggs, birds and insects. In captivity, They were observed to eat birds, flowers, maple and mulberry leaves, and bark and fruits of maple, beech, and mulberry. They also eat mushrooms, roots, acorns, lichens, and grasses. Occasionally, they supplement their diets with fish and insects. They eat over 1.5kg of fresh leaves and 4kg of fresh shoots daily. They can taste artificial sweeteners, and they are the only non primates known to be able to do so.</h4>
     </td>
     <td>
       <div class="img2">
