--- a/uhelpred.html
+++ b/uhelpred.html
@@ -11,7 +11,7 @@
 
         <nav>
             <ul>
-              <li><a class="active" href="./index.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="./threatred.html">Threat</a></li>
               <li><a href="./uhelpred.html"><u>How you can help</u></a></li>
               <li><a href="./other.html">Glossary</a></li>
@@ -38,21 +38,20 @@
         <div class="div3">
             <h3>How you can help</h3>
         <b><font size="4"><dl>
-            <dt>• Stop Deforestation</dt>
+            <dt>• Stop Deforestation</dt><br>
             
-                <dd>Mindfully buy wooden items to decrease wood usage.</dd><br>
-                <dd>Decrease the amount of pollution produced to help the forests.</dd><br>
-                <dd>Decrease the use of plastic as it is harmful for the environment</dd>
+                <dd>• Mindfully buy wooden items to decrease wood usage.</dd><br>
+                <dd>• Decrease the amount of pollution produced to help the forests.</dd><br>
+                <dd>• Do not encourage or promote products made with red panda parts</dd>
             <br>
 
-            <dt>• Spread Awareness</dt>
-            <dd> Spread awareness by sharing this website with others or just spreading the word around.</dd><br>
-                <dd>Volunteer to do environmental work</dd><br>
-                <dd> Promote NGO's that focus on saving trees like,</dd> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.ishafoundation.org/ProjectGreenHands#:~:text=An%20inspiring%20ecological%20initiative%20of%20Isha%20Foundation%2C%20Project,the%20state%20of%20Tamil%20Nadu%20in%20southern%20India.">Project Green Hands</a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://teamtrees.org/">Team Trees.</a><br><br>
+            <dt>• Spread Awareness</dt><br>
+            <dd>• Spread awareness by sharing this website with others or just spreading the word around.</dd><br>
+                <dd>• Promote NGO's that focus on saving red pandas like,</dd> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://redpandanetwork.org/">Red Panda Network</a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://katcentre.org/en/red-pandas">KATs Protection Of Red Panda’s</a><br><br>
             
                 <dt>• Adopt A Red Panda</dt>
-            <dd>Adopt a Red Panda if available in your local zoo or adopt at </dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://gifts.worldwildlife.org/gift-center/gifts/Species-Adoptions/Red-Panda.aspx?sc=AWY1705OQ18316A01275RX">WWF</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.pandasinternational.org/adopt-a-panda/#:~:text=Adopting%20a%20panda%20is%20a%20fun%20and%20easy,wildlife%20lover%20in%20your%20life%2C%20and%20a%20">Project Panda</a>
+            <dd>• Adopt a Red Panda if available in your local zoo or adopt at </dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://gifts.worldwildlife.org/gift-center/gifts/Species-Adoptions/Red-Panda.aspx?sc=AWY1705OQ18316A01275RX">WWF</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.pandasinternational.org/adopt-a-panda/#:~:text=Adopting%20a%20panda%20is%20a%20fun%20and%20easy,wildlife%20lover%20in%20your%20life%2C%20and%20a%20">Project Panda</a>
             <br><br>
         </dl></b></font>
     </div>
