--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
 
       <nav>
         <ul>
-          <li><a class="active" href="./index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./threatred.html">Threat</a></li>
           <li><a href="./uhelpred.html">How you can help</a></li>
           <li>
@@ -32,17 +32,17 @@
 
     <div class="div2">
       <h2>Glossary</h2>
-      <h3>Retractile- The ability to retract</h3>
+      <h3>Retractile: The ability to retract</h3>
       <h3>
-        Primate-A mammal of the group that includes lemurs, lorises, tarsiers,
+        Primate: A mammal of the group that includes lemurs, lorises, tarsiers,
         monkeys, apes, and humans.
       </h3>
       <h3>
-        Fragmentation-the process or state of breaking or being broken into
+        Fragmentation: the process or state of breaking or being broken into
         fragments.
       </h3>
-      <h3>CITES-Convention on International Trade in Endangered Species.</h3>
-      <h3>Ngo-Non government organization</h3>
+      <h3>CITES: Convention on International Trade in Endangered Species.</h3>
+      <h3>NGO: Non government organization</h3>
       <br />
 
       <h2>Sources</h2>
@@ -50,7 +50,7 @@
       <a href="https://www.worldwildlife.org/species/red-panda">WWF</a><br />
       <a href="https://www.bing.com (google.co.in)">Bing</a><br />
       <a href="https://www.w3schools.com/">Coding Techniques at W3schools</a
-      ><br />
+     ><br />
       <a href="https://en.wikipedia.org/wiki/Red_panda#Threats">wikipedia</a
       ><br />
     </div>
