--- a/other.html
+++ b/other.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Red_pandas4life.com</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link
       rel="shortcut icon"
       href="resources/Untitled design (7).png"
