--- a/threatred.html
+++ b/threatred.html
@@ -4,6 +4,9 @@
         <title>Red_pandas4life.com</title>
         <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
         <link href="./styles/threatred.css" rel="stylesheet"  type="text/css"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
     <body >
         <div class="div1">
