--- a/uhelpred.html
+++ b/uhelpred.html
@@ -4,6 +4,8 @@
         <title>Red_pandas4life.com</title>
         <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
         <link href="styles/uhelpred.css" rel="stylesheet"  type="text/css"> 
+        <link rel="shortcut icon" href="resources/title.png" type="image/x-icon">
+        <link href="./styles/threatred.css" rel="stylesheet"  type="text/css">
     </head>
     <body >
         <div class="div1">
