--- a/uhelpred.html
+++ b/uhelpred.html
@@ -26,7 +26,7 @@
            <tr class="tr1">
                <td>
                    <div class="img1">
-                       <img src="resources/rabonda.png" width="1100%" height="1100%">
+                       <img src="resources/rabonda.png" width="500px" height="100%">
                     </div>
                </td>
                <td class="div2">
